styles/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
}

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');

.top-navbar {
    width: 100%;
    height: 7vh;
    background-color: #a9a9a926;
    display: flex;
    align-items: center;
    text-align: center;
    justify-content: space-between;
}

.top-icons {
    margin-left: 45px;
}

.top-icons i {
    font-size: 20px;
    color: #1c1c50;
    margin-left: 10px;
    cursor: pointer;
}

.other-links {
    margin-right: 33px;
}

.other-links i {
    font-size: 20px;
    color: #1c1c50;
    margin-left: 10px;
    cursor: pointer;
}

#btn-login {
    width: 100px;
    border: 2px solid #1c1c50;
    color: #1c1c50;
    font-weight: bold;
    border-radius: 5px;
    height: 5vh;
    transition: 0.5s ease;
    cursor: pointer;
}

#btn-login a {
    text-decoration: none;
    color: #1c1c50;
    transition: 0.5s ease;
}

#btn-login a:hover {
    background-color: #1c1c50;
    color: white;
}

#btn-login:hover {
    background-color: #1c1c50;
    color: white;
}

#btn-signup {
    width: 100px;
    border: 2px solid #1c1c50;
    color: #1c1c50;
    font-weight: bold;
    border-radius: 5px;
    height: 5vh;
    transition: 0.5s ease;
    cursor: pointer;
}

#btn-signup a {
    text-decoration: none;
    color: #1c1c50;
    transition: 0.5s ease;
}

#btn-signup a:hover {
    background-color: #1c1c50;
    color: white;
}

#btn-signup:hover {
    background-color: #1c1c50;
    color: white;
}

@media screen and (max-width:500px){
    .top-icons {
        margin-left: 30px;
    }
    
    .top-icons i {
        font-size: 15px;
    }

    .other-links i {
        font-size: 15px;
    }

    #btn-login {
        width: 60px;
        height: 5vh;
    }

    #btn-signup {
        width: 70px;
        height: 5vh;
    }
    
}

@media screen and (max-width:350px){
    .top-icons {
        margin-left: 10px;
    }
    
    .top-icons i {
        font-size: 10px;
    }

    .other-links {
        font-size: 10px;
    }

    .other-links i {
        font-size: 10px;
    }

    #btn-login {
        width: 50px;
        height: 5vh;
        font-size: 13px;
    }

    #btn-signup {
        width: 60px;
        height: 5vh;
        font-size: 13px;
    }
    
}

@media screen and (max-width:350px){
    .top-icons {
        margin-left: 5px;
    }
    
    .top-icons i {
        font-size: 12px;
    }

    .other-links {
        font-size: 10px;
    }

    .other-links i {
        font-size: 12px;
    }

    #btn-login {
        width: 40px;
        height: 5vh;
        font-size: 10px;
    }

    #btn-signup {
        width: 50px;
        height: 5vh;
        font-size: 10px;
    }
    
}

.home-section {
    width: 100%;
    height: 93vh;
    background-color: #a9a9a926;
}

#navbar {
    background-color: #f3f15e;
    font-size: 16px;
    font-family: 'Roboto Slab', sans-serif;
}

#navbar .nav-link {
    color: rgb(33,150,243);
    font-weight: bold;
    margin-left: 5px;
    transition: 0.5s ease;
}

#navbar .nav-link:hover {
    color: white;
    border-radius: 5px;
}

.dropdown li a {
    color: white;
    border: 1px solid white;
}

#search-btn:hover {
    background-color: #1c1c50;
}

.home {
    width: 100%;
    min-height: 100vh;
    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/background.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: right;
    background-attachment: fixed;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    position: relative;
    z-index: 0;
    font-family: 'Roboto', sans-serif;
}

.home .content {
    flex: 1 1 400px;
    margin-top: -30px;
}

.content h3 {
    margin-left: 120px;
    font-size: 50px;
    text-shadow:  1px 1px 1px black;
    color: rgb(33,150,243);
    font-weight: bold;
}

.content h3 span {
    font-size: 40px;
}

.content p {
    margin-left: 120px;
    color: rgb(255, 255, 255);
    font-style: italic;
}

.content #shopnow {
    margin-left: 120px;
    width: 200px;
    height: 38px;
    border: 2px solid #1c1c50;
    border-radius: 5px;
    font-weight: bold;
    transition: 0.5s ease;
    cursor: pointer;
}

.content #shopnow:hover {
    background-color: rgb(33,150,243);
    color: white;
}

@media screen and (max-width:800px) {
    .content h3 {
        margin-left: 50px;
        font-size: 40px;
    }

    .content p {
        margin-left: 50px;
    }

    .content #shopnow {
        margin-left: 50px;
    }
}

@media screen and (max-width:570px) {
    .content h3 {
        margin-left: 20px;
    }

    .content p {
        margin-left: 20px;
    }

    .content #shopnow {
        margin-left: 20px;
    }
}

@media screen and (max-width:799px) {
    .home-section {
        height: 100vh;
    }
}

#row-div {
    margin-top: 10px;
}

#top-cards {
    margin-top: 30px;
    font-family: 'Roboto', sans-serif;
}

#top-cards .card img {
    height: 60vh;
}

#top-cards h5 {
    color: rgb(33,150,243);
    font-weight: bold;
}

#top-cards button {
    width: 150px;
    height: 33px;
    font-weight: bold;
    letter-spacing: 3px;
    background: transparent;
    color: rgb(33,150,243);
    border: 2px solid #1c1c50;
    transition: 0.5s ease;
    cursor: pointer;
}

#top-cards button:hover {
    background-color: rgb(33,150,243);
    color: white;
}

.banner {
    width: 100%;
    height: 50vh;
    margin-top: 50px;
    background-image: linear-gradient(rgba(0,0,0.3), rgba(0,0,0,0.3)), url(../img/living-room-g6732d13b9_1920.jpg);
    background-position: 150px;
}

.banner .content {
    text-align: center;
    padding-top: 100px;
}

.banner .content h1 {
    color: white;
    text-shadow: 1px 1px 1px black;
    letter-spacing: 3px;
}

.banner .content p {
    color: white;
    text-shadow: 1px 1px 1px black;
    letter-spacing: 3px;
}

#bannerbtn button {
    width: 150px;
    height: 38px;
    background: transparent;
    color: white;
    border: 2px solid white;
    transition: 0.5s ease;
    cursor: pointer;
}

#bannerbtn button:hover{
    background-color: rgb(33,150,243);
    border: none;
}

footer {
    background-color: #333;
    color: #fff;
    padding: 1em 0;
  }
  
  .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    max-width: 960px;
    margin: 0 auto;
    padding: 0 1em;
  }
  
  nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
    display: flex;
  }
  
  nav li {
    margin-left: 1em;
  }
  
  nav a {
    color: #fff;
    text-decoration: none;
  }
  
  @media (max-width: 768px) {
    .container {
      flex-direction: column;
      align-items: center;
    }
    
    nav ul {
      flex-direction: column;
    }
    
    nav li {
      margin: 0.5em 0;
    }
  }
  

